--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css">
     <title>你好</title>
 </head>
 <body>
     <h1>你好！git</h1>
     <h2>你好！git2</h2> 
     <h3>今天学习git使用！</h3>
+    
 </body>
 </html>
